--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>www.myBitcoinZwallet.com</title>    
+    <title>www.myBitcoinZwallet.com</title>
     <style>
         body {
             display: flex;
@@ -18,20 +18,24 @@
             display: flex;
             align-items: center;
             justify-content: center;
-        }   
+        }
+
+        .container {
+            text-align: center;
+        }
     </style>
 </head>
-<div class="container">Always check the URL and look for Certificate up there. Look for https://www.mybitcoinzwallet.com/. Be safe &amp; secure</a>.</div>
 <body>
-    <div id="navbar"></div><br/>
+    <div id="navbar"></div>
+    <div class="container">Always check the URL and look for Certificate up there. Look for https://www.mybitcoinzwallet.com/. Be safe &amp; secure</a>.</div>
 
-    <div class="aligner">        
+    <div class="aligner">
         <div id="wallet"></div>
         <div id="guide"></div>
         <div id="faq"></div>
     </div><br/>
     <div id="footer"></div>
-    
+
 </body>
 
 </html>
